# chess-engine

./: Cargo.toml  README.md  blog.md
.github/workflows/: release.yml
chess_core/: Cargo.toml
chess_core/chess_perftree/: Cargo.toml
chess_core/chess_perftree/src/: main.rs
chess_core/src/: square.rs
chess_core/src/move/: mod.rs  move_generator.rs  move_maps.rs
chess_core/src/state/: bitboard.rs  chess_board.rs  flags.rs  game_state.rs  make_unmake.rs
chess_engines/: Cargo.toml
chess_engines/src/: lib.rs
chess_engines/src/alpha_beta/: mod.rs  search.rs  transposition_table.rs
chess_engines/src/alpha_beta/evaluation/: simple_eval.rs
chess_wasm/: Cargo.toml
chess_wasm/src/: api.rs  lib.rs
src/: api.rs  lib.rs  perft.rs
src/game/: color.rs  mod.rs  square.rs
src/game/move/: mod.rs  move.rs  move_generator.rs  move_maps.rs
src/game/state/: bitboard.rs  chess_board.rs  flags.rs  game_state.rs  make_unmake.rs  mod.rs  zobrist_numbers.rs
src/search/: mod.rs  search.rs  transposition_table.rs
src/search/evaluation/: mod.rs  simple_eval.rs
