[package]
name = "chess-engine"
description = "A chess engine written in Rust, compiled to WebAssembly."
version = "0.1.0"
authors = ["matthiasgreen <matthiasgreen2@gmail.com>"]
edition = "2021"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/matthiasgreen/chess-engine"
keywords = ["chess", "engine"]


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
boxarray = "1.3.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
rand_chacha = "0.3.1"
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
chrono = { version = "0.4.39", features = ["wasmbind"] }
