[package]
name = "chess_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
chrono = { version = "0.4.39", features = ["wasmbind"] }
getrandom = { version = "0.2", features = ["js"] }
chess_core = { version = "0.1.0", path = "../chess_core" }
chess_engines = { version = "0.1.0", path = "../chess_engines" }

